--- a/클래스 개념.html
+++ b/클래스 개념.html
@@ -28,7 +28,7 @@ s.style.top=500+"px";
 
 // 문서가 로드되면, 그때 init()하겠다..
 window.addEventListener("load", funtion(){
-alert("문서 로드 완료");
+alert("문서 로드 완료넹");
 });
 function
   </script>
